--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "numpy>=2.3.5",
     "pandas>=2.3.3",
     "pyfixest>=0.40.1",
+    "scpi-pkg>=3.0.1",
     "statsmodels>=0.14.5",
 ]
